Moving Speller to Implementation